--- a/index.html
+++ b/index.html
@@ -16,14 +16,23 @@
           <a class="nav-link" href="#">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="#">Contact</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
-        </li>
+       
       </ul>
     <div class="container">
-
+<h1 class="text-center">Converter Currency App</h1> 
+<form action="">
+  <label for="quantity">Choose a currency </label><br>
+  <input type="number"><br>
+  <label for="quantity">Choose a currency </label><br>
+  <select name="currency" id="">
+    <option value="INR">Indian Rupee</option>
+  <option value="USD">US DOllar</option>  
+  <option value="EUR">Euro</option>  
+  </select><br>
+  <button type="submit">Submit</button>
+</form>
     </div>
     <footer></footer>
 </body>
